--- a/pages/18778.html
+++ b/pages/18778.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Augustin Cauchy in nLab
+      Ram Kanwal in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Augustin Cauchy
+      Ram Kanwal
   </h1>
 
 
@@ -308,53 +308,15 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong>Augustin-Louis Cauchy</strong> was a pioneer in <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a> and <a class='existingWikiWord' href='/nlab/show/group+theory'>group theory</a>. He wrote an influential 1821 textbook, <em><a class='existingWikiWord' href='/nlab/show/Cours+d%27Analyse'>Cours d&#39;Analyse</a></em>.</p>
+    <ul>
+<li><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=2292'>Mathematics Genealogy page</a></li>
+</ul>
 
-<p>Cauchy described the basic concepts of <a class='existingWikiWord' href='/nlab/show/differential+calculus'>differential</a> and <a class='existingWikiWord' href='/nlab/show/integral+calculus'>integral</a> <a class='existingWikiWord' href='/nlab/show/infinitesimal+analysis'>calculus</a> in terms of <a class='existingWikiWord' href='/nlab/show/convergence'>limits</a>. His conception of limits was based on <a class='existingWikiWord' href='/nlab/show/infinitesimal+number'>infinitesimal</a> <a class='existingWikiWord' href='/nlab/show/variable'>variables</a>, which do not appear as such in modern <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a>, although they have been variously identified with <a class='existingWikiWord' href='/nlab/show/sequence'>sequences</a> (that converge to zero), <a class='existingWikiWord' href='/nlab/show/ultrafilter'>ultrafilters</a> (that converge to zero), <span class='newWikiWord'>hyperpoints<a href='/nlab/new/hyperpoint'>?</a></span> (in the <a class='existingWikiWord' href='/nlab/show/infinitesimal+neighborhood'>infinitesimal neighbourhood</a> of zero) in the sense of <a class='existingWikiWord' href='/nlab/show/nonstandard+analysis'>nonstandard analysis</a>, etc. (His infinitesimals were <em>not</em> <a class='existingWikiWord' href='/nlab/show/nilpotent+infinitesimal'>nilpotent</a>.)</p>
-
-<p>Cauchy&#39;s student <a class='existingWikiWord' href='/nlab/show/Karl+Weierstra%C3%9F'>Karl Weierstrass</a> defined limits in terms of <a class='existingWikiWord' href='/nlab/show/Richard+Dedekind'>Richard Dedekind</a>&#39;s static conceptions of <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a> and <a class='existingWikiWord' href='/nlab/show/function'>function</a>, creating modern <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a>.</p>
-
-<p>Cauchy is associated with:</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_64223c0a9066777019ef2d519bea8ff3a6809624_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Cauchy+sequence'>Cauchy sequences</a></p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/Cauchy+group+theorem'>Cauchy group theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cauchy+sequence'>Cauchy sequences</a> (and thus <a class='existingWikiWord' href='/nlab/show/Cauchy+sequence'>Cauchy nets</a>, <a class='existingWikiWord' href='/nlab/show/Cauchy+filter'>Cauchy filters</a>, and <a class='existingWikiWord' href='/nlab/show/Cauchy+space'>Cauchy spaces</a>, although Cauchy himself knew none of these)</p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/Cauchy-Riemann+equation'>Cauchy–Riemann equations</a></p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/Cauchy+integral+theorem'>Cauchy integral theorem</a> and <a class='existingWikiWord' href='/nlab/show/Cauchy%27s+integral+formula'>Cauchy integral formula</a> (for <a class='existingWikiWord' href='/nlab/show/line+integral'>contour integrals</a> in <a class='existingWikiWord' href='/nlab/show/complex+analysis'>complex analysis</a>)</p>
-</li>
-
-<li>
-<p>the <span class='newWikiWord'>Cauchy integral<a href='/nlab/new/Cauchy+integral'>?</a></span></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cours+d%27Analyse'>Cours d&#39;Analyse</a>, a textbook on <a class='existingWikiWord' href='/nlab/show/infinitesimal+analysis'>infinitesimal analysis</a>/<a class='existingWikiWord' href='/nlab/show/epsilontic+analysis'>epsilontic analysis</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cauchy+sum+theorem'>Cauchy sum theorem</a> (“<a class='existingWikiWord' href='/nlab/show/Cauchy+sum+theorem'>Cauchy&#39;s mistake</a>”) from his 1821 textbook <a class='existingWikiWord' href='/nlab/show/Cours+d%27Analyse'>Cours d&#39;Analyse</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surface</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Cauchy+real+number'>Cauchy real number</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/distributional+solution+of+a+PDE'>generalized solution of a PDE</a></p>
 </li>
 
 <li>
@@ -363,31 +325,25 @@ margin-left: 0em;
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
- 
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 14, 2017 06:06:06 
+  Created on November 14, 2017 06:24:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Augustin+Cauchy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Augustin+Cauchy/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Augustin+Cauchy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Augustin+Cauchy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ram+Kanwal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Augustin+Cauchy" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Ram+Kanwal" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Augustin+Cauchy" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Ram+Kanwal" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Augustin+Cauchy" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Ram+Kanwal" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
