--- a/pages/3972.html
+++ b/pages/3972.html
@@ -308,19 +308,212 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#abstract'>Abstract</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='integration_theory'>Integration theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/integral'>integration</a></strong></p>
+<table><thead><tr><th>analytic integration</th><th>cohomological integration</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/measurable+space'>measurable space</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+duality'>Poincaré duality</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/orientation+in+generalized+cohomology'>orientation in generalized cohomology</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/volume+form'>volume form</a></td><td style='text-align: left;'>(<a class='existingWikiWord' href='/nlab/show/virtual+fundamental+class'>virtual</a>) <a class='existingWikiWord' href='/nlab/show/fundamental+class'>fundamental class</a></td></tr>
+<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+integration'>Riemann</a>/<a class='existingWikiWord' href='/nlab/show/Lebesgue+integration'>Lebesgue integration</a> <a class='existingWikiWord' href='/nlab/show/integration+of+differential+forms'>of differential forms</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/fiber+integration'>push-forward in generalized cohomology</a>/<a class='existingWikiWord' href='/nlab/show/fiber+integration+in+differential+cohomology'>in differential cohomology</a></td></tr>
+</tbody></table>
+<h2 id='analytic_integration'>Analytic integration</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/integral+calculus'>integral calculus</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/Riemann+integration'>Riemann integration</a>, <a class='existingWikiWord' href='/nlab/show/Lebesgue+integration'>Lebesgue integration</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/line+integral'>line integral</a>/<a class='existingWikiWord' href='/nlab/show/line+integral'>contour integration</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/integration+of+differential+forms'>integration of differential forms</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/integration+over+supermanifolds'>integration over supermanifolds</a>, <a class='existingWikiWord' href='/nlab/show/Berezin+integral'>Berezin integral</a>, <a class='existingWikiWord' href='/nlab/show/fermionic+path+integral'>fermionic path integral</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/Kontsevich+integral'>Kontsevich integral</a>, <a class='existingWikiWord' href='/nlab/show/Selberg+integral'>Selberg integral</a>, <a class='existingWikiWord' href='/nlab/show/elliptic+Selberg+integral'>elliptic Selberg integral</a></p>
+
+<h2 id='cohomological_integration'>Cohomological integration</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/fiber+integration+in+ordinary+differential+cohomology'>integration in ordinary differential cohomology</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/fiber+integration+in+differential+K-theory'>integration in differential K-theory</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck-Riemann-Roch+theorem'>Riemann-Roch theorem</a></p>
+
+<h2 id='variants'>Variants</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/Lie+integration'>Lie integration</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/Batalin-Vilkovisky+integral'>Batalin-Vilkovisky integral</a></p>
+</div>
+
+<h4 id='functional_analysis'>Functional analysis</h4>
+
+<div class='hide'>
+<ul>
+<li><strong><a class='existingWikiWord' href='/nlab/show/functional+analysis'>Functional Analysis</a></strong></li>
+</ul>
+
+<h2 id='overview_diagrams'>Overview diagrams</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/TVS+relationships'>topological vector spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/diagram+of+LCTVS+properties'>locally convex topological vector spaces</a></p>
+</li>
+</ul>
+
+<h2 id='basic_concepts'>Basic concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach Spaces</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/reflexive+Banach+space'>reflexive</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert Spaces</a>, <a class='existingWikiWord' href='/nlab/show/Fr%C3%A9chet+space'>Fréchet Spaces</a>, <a class='existingWikiWord' href='/nlab/show/Sobolev+space'>Sobolev spaces</a>, <a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>Lebesgue Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bornological+topological+vector+space'>Bornological Vector Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/barreled+topological+vector+space'>Barrelled Vector Spaces</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/linear+map'>linear operator</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded</a>, <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded</a>, <a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>self-adjoint</a>, <a class='existingWikiWord' href='/nlab/show/compact+operator'>compact</a>, <a class='existingWikiWord' href='/nlab/show/Fredholm+operator'>Fredholm</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectrum+of+an+operator'>spectrum of an operator</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebras</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/functional+calculus'>functional calculus</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-Weierstrass+theorem'>Stone-Weierstrass theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+theory'>spectral theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+theorem'>spectral theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand+duality'>Gelfand duality</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functional+calculus'>functional calculus</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Riesz+representation+theorem'>Riesz representation theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measure+theory'>measure theory</a></p>
+</li>
+</ul>
+
+<h2 id='topics_in_functional_analysis'>Topics in Functional Analysis</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/basis+in+functional+analysis'>Bases</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theories+in+functional+analysis'>Algebraic Theories in Functional Analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/an+elementary+treatment+of+Hilbert+spaces'>An Elementary Treatment of Hilbert Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/isomorphism+classes+of+Banach+spaces'>When are two Banach spaces isomorphic?</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/functional+analysis+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The Cauchy principal value is a way to assign finite values to divergent integrals, as such it can be regarded as a toy example of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>.</p>
+<p>The <em>Cauchy principal value</em> of a <a class='existingWikiWord' href='/nlab/show/function'>function</a> which is <a class='existingWikiWord' href='/nlab/show/measure+space'>integrable</a> on the <a class='existingWikiWord' href='/nlab/show/complement'>complement</a> of one point is, if it exists, the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a> of the <a class='existingWikiWord' href='/nlab/show/integral'>integrals</a> of the function over subsets in the <a class='existingWikiWord' href='/nlab/show/complement'>complement</a> of this point as these integration <a class='existingWikiWord' href='/nlab/show/domain'>domains</a> tend to that point <em>symmetrically</em> from all sides.</p>
 
-<h2 id='abstract'>Abstract</h2>
+<p>One also subsumes the case that the “point” is “at infinity”, hence that the function is <a class='existingWikiWord' href='/nlab/show/measure+space'>integrable</a> over every <a class='existingWikiWord' href='/nlab/show/bounded+set'>bounded</a> <a class='existingWikiWord' href='/nlab/show/domain'>domain</a>. In this case the Cauchy principal value is the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a>, if it exists, of the <a class='existingWikiWord' href='/nlab/show/integral'>integrals</a> of the function over bounded domains, as their bounds tend <em>symmetrically</em> to infinity.</p>
 
-<p>…</p>
+<p>The operation of sending a <a class='existingWikiWord' href='/nlab/show/compact+support'>compactly supported</a> <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth function</a> (<a class='existingWikiWord' href='/nlab/show/bump+function'>bump function</a>) to Cauchy principal value of its pointwise product with a function <math class='maruku-mathml' display='inline' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> that may be singular at the origin defines a <a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>.</mo><mi>v</mi><mo>.</mo><mo stretchy='false'>(</mo><mi>f</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>p.v.(f)</annotation></semantics></math>.</p>
+
+<p>When the Cauchy principal value exists but the full <a class='existingWikiWord' href='/nlab/show/integral'>integral</a> does not (hence when the full integral “diverges”) one may think of the Cauchy principal value as “exracting a finite value from a diverging quantity”. This is similar to the <em>intuition</em> of the early days of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> (<a class='existingWikiWord' href='/nlab/show/Schwinger-Tomonaga-Feynman-Dyson'>Schwinger-Tomonaga-Feynman-Dyson</a>), but one has to be careful not to carry this analogy too far.</p>
+
+<p>One point where the Cauchy principal value really does play a key role in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> is in the computation of <a class='existingWikiWord' href='/nlab/show/fundamental+solution'>Green functions</a> (<a class='existingWikiWord' href='/nlab/show/quantum+propagator'>propagators</a>) for the <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon operator</a> and the <a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a>. See at <em><a class='existingWikiWord' href='/nlab/show/advanced+and+retarded+causal+propagators'>advanced and retarded propagator</a></em> for more on this.</p>
 
 <h2 id='definition'>Definition</h2>
 
-<p>…</p>
+<div class='num_defn'>
+<h6 id='definition_2'>Definition</h6>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>f \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/function'>function</a> on the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> such that for every <a class='existingWikiWord' href='/nlab/show/positive+number'>positive real number</a> <math class='maruku-mathml' display='inline' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϵ</mi></mrow><annotation encoding='application/x-tex'>\epsilon</annotation></semantics></math> its <span class='newWikiWord'>restrictioo<a href='/nlab/new/restrictioo'>?</a></span> to <math class='maruku-mathml' display='inline' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='0em' rspace='thinmathspace'>matbbb</mo><mi>R</mi><mo>∖</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>ϵ</mi><mo>,</mo><mi>ϵ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\matbbb{R}\setminus (-\epsilon, \epsilon)</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/measure+space'>integrable</a>. Then the <em>Cauchy principal value</em> of <math class='maruku-mathml' display='inline' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> is, if it exists, the <a class='existingWikiWord' href='/nlab/show/convergence'>limit</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c97d5157eb9cfed7aaffff3d8e2c39669c494dbd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo>.</mo><mi>v</mi><mo>.</mo><mo stretchy='false'>(</mo><mi>f</mi><mo stretchy='false'>)</mo><mo>=</mo><munder><mi>lim</mi><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></munder><munder><mo>∫</mo><mrow><mi>ℝ</mi><mo>∖</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>ϵ</mi><mo>,</mo><mi>ϵ</mi><mo stretchy='false'>)</mo></mrow></munder><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>d</mi><mi>x</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  p.v.(f) = \underset{\epsilon \to 0}{\lim} 
+  \underset{\mathbb{R} \setminus (-\epsilon, \epsilon)}{\int} f(x) \, d x
+  \,.
+
+</annotation></semantics></math></div></div>
 
 <h2 id='examples'>Examples</h2>
 
@@ -334,14 +527,22 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>Named after <a class='existingWikiWord' href='/nlab/show/Augustin+Cauchy'>Augustin Cauchy</a></p>
+
 <ul>
-<li>Wikipedia: <a href='http://en.wikipedia.org/wiki/Cauchy_principal_value'>Cauchy principal value</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Ram+Kanwal'>Ram Kanwal</a>, sectin 8.3 of <em>Linear Integral Equations</em> Birkhäuser 1997</li>
 </ul>
 
-<p>and</p>
+<p>See also</p>
 
 <ul>
-<li>Wikipedia: <a href='http://en.wikipedia.org/wiki/Hadamard_finite_part_integral'>Hadamard principal value</a></li>
+<li>
+<p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Cauchy_principal_value'>Cauchy principal value</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Hadamard_finite_part_integral'>Hadamard principal value</a></em></p>
+</li>
 </ul>
 
 <p>
@@ -349,14 +550,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 27, 2014 09:42:25 
+  Revised on November 14, 2017 06:56:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.136.246.44)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cauchy+principal+value" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cauchy+principal+value/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Cauchy+principal+value" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cauchy+principal+value" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cauchy+principal+value" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cauchy+principal+value/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Cauchy+principal+value" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cauchy+principal+value" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
