--- a/pages/1915.html
+++ b/pages/1915.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,23 +308,43 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The <strong>restriction</strong> of a <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f: X \to Y</annotation></semantics></math> to a <a class='existingWikiWord' href='/nlab/show/subset'>subset</a> <math class='maruku-mathml' display='inline' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is simply the <a class='existingWikiWord' href='/nlab/show/composition'>composite</a> of <math class='maruku-mathml' display='inline' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> and the <a class='existingWikiWord' href='/nlab/show/inclusion+function'>inclusion function</a> of <math class='maruku-mathml' display='inline' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mover><mo>→</mo><mrow><msub><mi>i</mi> <mi>U</mi></msub></mrow></mover><mi>X</mi><mover><mo>→</mo><mi>f</mi></mover><mi>Y</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'> U \stackrel{i_U}\to X \stackrel{f}\to Y .</annotation></semantics></math></div>
-<p>It is often written as <math class='maruku-mathml' display='inline' id='mathml_6babdb03b445e5efe747cc196acc1b58ccdbc5cc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>f</mi> <mrow><mo stretchy='false'>|</mo><mi>U</mi></mrow></msub><mo>:</mo><mi>U</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f_{|U}: U \to Y</annotation></semantics></math>, or a variation on that theme.</p>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#definiion'>Definiion</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='definiion'>Definiion</h2>
+
+<p>The <strong>restriction</strong> of a <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f: X \to Y</annotation></semantics></math> to a <a class='existingWikiWord' href='/nlab/show/subset'>subset</a> <math class='maruku-mathml' display='inline' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is simply the <a class='existingWikiWord' href='/nlab/show/composition'>composite</a> of <math class='maruku-mathml' display='inline' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> and the <a class='existingWikiWord' href='/nlab/show/inclusion+function'>inclusion function</a> of <math class='maruku-mathml' display='inline' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mover><mo>→</mo><mrow><msub><mi>i</mi> <mi>U</mi></msub></mrow></mover><mi>X</mi><mover><mo>→</mo><mi>f</mi></mover><mi>Y</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'> U \stackrel{i_U}\to X \stackrel{f}\to Y .</annotation></semantics></math></div>
+<p>It is often written as <math class='maruku-mathml' display='inline' id='mathml_02c9da12ac2ae77135c90a94cd4512c6be9c3014_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>f</mi> <mrow><mo stretchy='false'>|</mo><mi>U</mi></mrow></msub><mo>:</mo><mi>U</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f_{|U}: U \to Y</annotation></semantics></math>, or a variation on that theme.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension'>extension</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/lift'>lift</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Cauchy+principal+value'>Cauchy principal value</a></p>
+</li>
+</ul>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on July 24, 2009 21:57:45 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (71.104.230.172)
+  Revised on November 14, 2017 06:49:31 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/restriction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/restriction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/restriction/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/restriction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/restriction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
