--- a/pages/5706.html
+++ b/pages/5706.html
@@ -356,7 +356,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <a class='existingWikiWord' href='/nlab/show/Kate+Ponto'>Kate Ponto</a>,</p>
 
-<p><em>More concise algebraic topology – Localization, Completion and Model Categories_</em></p>
+<p><em>More concise algebraic topology – Localization, Completion, and Model Categories</em></p>
 
 <p>University of Chicago Press (2012)</p>
 
@@ -378,14 +378,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 15, 2017 11:36:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on November 14, 2017 11:49:08 
+  by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
+  (137.250.162.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/A+Concise+Course+in+Algebraic+Topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/A+Concise+Course+in+Algebraic+Topology/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/A+Concise+Course+in+Algebraic+Topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/A+Concise+Course+in+Algebraic+Topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/A+Concise+Course+in+Algebraic+Topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/A+Concise+Course+in+Algebraic+Topology/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/A+Concise+Course+in+Algebraic+Topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/A+Concise+Course+in+Algebraic+Topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
