--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f1dbb71d2f0e46c514f4edbd33981954d2285092_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Δ</mi> <mo>+</mo></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mi>lim</mi><mfrac linethickness='0'><mrow><mrow><mi>ϵ</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></mrow><mrow><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></mrow></mfrac></munder><mo>∫</mo><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo>+</mo><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo></mrow></msup></mrow></msup></mrow><mrow><mo stretchy='false'>(</mo><msub><mi>k</mi> <mn>0</mn></msub><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mo>−</mo><msup><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>−</mo><msup><mrow><mo>(</mo><mstyle displaystyle='false'><mfrac><mrow><mi>m</mi><mi>c</mi></mrow><mi>ℏ</mi></mfrac></mstyle><mo>)</mo></mrow> <mn>2</mn></msup><mo>±</mo><mi>i</mi><mi>ϵ</mi></mrow></mfrac></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mi>lim</mi><mfrac linethickness='0'><mrow><mrow><mi>ϵ</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></mrow><mrow><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></mrow></mfrac></munder><mo>∫</mo><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo>+</mo><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo></mrow></msup></mrow></msup></mrow><mrow><mo>(</mo><msup><mrow><mo>(</mo><msub><mi>k</mi> <mn>0</mn></msub><mo>±</mo><mi>i</mi><mstyle displaystyle='false'><mfrac><mi>ϵ</mi><mrow><mn>2</mn><msub><mi>k</mi> <mn>0</mn></msub></mrow></mfrac></mstyle><mo>)</mo></mrow> <mn>2</mn></msup><mo>−</mo><msup><mrow><mo>(</mo><msub><mi>ω</mi> <mi>ϵ</mi></msub><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow></mfrac></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mi>lim</mi><mfrac linethickness='0'><mrow><mrow><mi>ϵ</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></mrow><mrow><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></mrow></mfrac></munder><mo>∫</mo><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo><mo>+</mo><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo></mrow></msup></mrow></msup></mrow><mrow><mo>(</mo><msup><mrow><mo>(</mo><msub><mi>k</mi> <mn>0</mn></msub><mo>±</mo><mi>i</mi><mstyle displaystyle='false'><mfrac><mi>ϵ</mi><mrow><mn>2</mn><msub><mi>k</mi> <mn>0</mn></msub></mrow></mfrac></mstyle><mo>)</mo></mrow> <mn>2</mn></msup><mo>−</mo><msup><mrow><mo>(</mo><msub><mi>ω</mi> <mi>ϵ</mi></msub><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow> <mn>2</mn></msup><mo>)</mo></mrow></mfrac></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_94fcc3bbbb1830abf462faf16d8ef87eae32ae87_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Δ</mi> <mo>+</mo></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mi>lim</mi><mfrac linethickness='0'><mrow><mrow><mi>ϵ</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></mrow><mrow><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></mrow></mfrac></munder><mo>∫</mo><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>0</mn></msup><mo>−</mo><msup><mi>y</mi> <mn>0</mn></msup><mo stretchy='false'>)</mo></mrow></msup><msup><mi>e</mi> <mrow><mi>i</mi><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>(</mo><mover><mi>x</mi><mo stretchy='false'>→</mo></mover><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo></mrow></msup></mrow><mrow><mo stretchy='false'>(</mo><msub><mi>k</mi> <mn>0</mn></msub><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mo>−</mo><msup><mrow><mo stretchy='false'>|</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>|</mo></mrow> <mn>2</mn></msup><mo>−</mo><msup><mrow><mo>(</mo><mstyle displaystyle='false'><mfrac><mrow><mi>m</mi><mi>c</mi></mrow><mi>ℏ</mi></mfrac></mstyle><mo>)</mo></mrow> <mn>2</mn></msup><mo>±</mo><mi>i</mi><mi>ϵ</mi></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>d</mi><msub><mi>k</mi> <mn>0</mn></msub><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mi>p</mi></msup><mover><mi>k</mi><mo stretchy='false'>→</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mi>lim</mi><mfrac linethickness='0'><mrow><mrow><mi>ϵ</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></mrow><mrow><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></mrow></mfrac></munder><mo>∫</mo><mo>∫</mo><mfrac><mrow></mrow><mrow><mo stretchy='false'>(</mo><msub><mi>k</mi> <mn>0</mn></msub><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup><mo>−</mo><mrow><mo>(</mo><msub><mi>ω</mi> <mi>ϵ</mi></msub><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>d</mi><msub><mi>k</mi> <mn>0</mn></msub><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mi>p</mi></msup><mover><mi>k</mi><mo stretchy='false'>→</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup></mrow></mfrac><munder><mi>lim</mi><mfrac linethickness='0'><mrow><mrow><mi>ϵ</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></mrow><mrow><mrow><mi>ϵ</mi><mo>→</mo><mn>0</mn></mrow></mrow></mfrac></munder><mo>∫</mo><mo>∫</mo><mfrac><mrow></mrow><mrow><mrow><mo>(</mo><msub><mi>k</mi> <mn>0</mn></msub><mo>−</mo><msub><mi>ω</mi> <mi>ϵ</mi></msub><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow><mrow><mo>(</mo><msub><mi>k</mi> <mn>0</mn></msub><mo>+</mo><msub><mi>ω</mi> <mi>ϵ</mi></msub><mo stretchy='false'>(</mo><mover><mi>k</mi><mo stretchy='false'>→</mo></mover><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mi>c</mi><mo>)</mo></mrow></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>d</mi><msub><mi>k</mi> <mn>0</mn></msub><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mi>p</mi></msup><mover><mi>k</mi><mo stretchy='false'>→</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mrow><mo>{</mo><mo>,</mo><mo>,</mo><mo>,</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \begin{aligned}
     \Delta_+(x-y)
      &amp; =
@@ -316,52 +316,55 @@ margin-left: 0em;
      \underset{ {\epsilon \in (0,\infty)} \atop {\epsilon \to 0} }{\lim}
      \int \int
      \frac{ 
-       e^{i k_0 (x^0 - y^0) + e^{i \vec k (\vec x - \vec y)}}
+       e^{i k_0 (x^0 - y^0)} e^{i \vec k (\vec x - \vec y)}
      }{
        (k_0)^2 - {\vert \vec k\vert}^2  -\left( \tfrac{m c}{\hbar}\right)^2 \pm i \epsilon  
      }
+     \, d k_0 \, d^p \vec k
      \\
      &amp; =
      \frac{1}{(2\pi)^{p+1}}
      \underset{ {\epsilon \in (0,\infty)} \atop {\epsilon \to 0} }{\lim}
      \int \int
      \frac{ 
-       e^{i k_0 (x^0 - y^0) + e^{i \vec k (\vec x - \vec y)}}
      }{
-       \left(
-          \left( k_0  \pm i \tfrac{\epsilon}{2 k_0}  \right)^2 
-          -
-          \left( \omega_\epsilon({\vec k})/c \right)^2
-       \right)
+       (k_0)^2 - \left(\omega_\epsilon(\vec k)/c\right)
      }
-     \\ &amp;=
-     &amp; =
+     \, d k_0 \, d^p \vec k
+     \\
+     &amp;=
      \frac{1}{(2\pi)^{p+1}}
      \underset{ {\epsilon \in (0,\infty)} \atop {\epsilon \to 0} }{\lim}
      \int \int
      \frac{ 
-       e^{i k_0 (x^0 - y^0) + e^{i \vec k (\vec x - \vec y)}}
      }{
        \left(
-          \left( k_0  \pm i \tfrac{\epsilon}{2 k_0}  \right)^2 
-          -
-          \left( \omega_\epsilon({\vec k})/c \right)^2
+         k_0 - \omega_\epsilon(\vec  k)/c
+       \right)
+       \left(
+          k_0 + \omega_\epsilon(\vec k)/c
        \right)
      }
+     \, d k_0 \, d^p \vec k
+     \\
+     &amp; = 
+     \left\{
+       ,,,
+     \right.
   \end{aligned}
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 14, 2017 13:43:37 
+  Revised on November 14, 2017 14:58:09 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (88.128.80.229)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1239" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1239 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1240" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1240 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
