--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,18 +308,80 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>…</p>
+    <p>Let <math class='maruku-mathml' display='inline' id='mathml_1778fa62ac407de747320ed828105818dfeec9e1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Γ</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mover><mo>⟶</mo><mi>P</mi></mover><msub><mi>Γ</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Gamma_\Sigma(E) \overset{P}{\longrightarrow} \Gamma_\Sigma(E^\ast)</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/Green+hyperbolic+partial+differential+equation'>Green hyperbolic differential operator</a> (def. \ref{GreenHyperbolicDifferentialOperator}) with <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal Green function</a> <math class='maruku-mathml' display='inline' id='mathml_1778fa62ac407de747320ed828105818dfeec9e1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi mathvariant='normal'>G</mi></mrow><annotation encoding='application/x-tex'>\mathrm{G}</annotation></semantics></math> (def. \ref{GreenHyperbolicDifferentialOperator}). Then the sequences</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1778fa62ac407de747320ed828105818dfeec9e1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mn>0</mn></mtd> <mtd><mo>→</mo></mtd> <mtd><msub><mi>Γ</mi> <mrow><mi>Σ</mi><mo>,</mo><mi>cp</mi></mrow></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>P</mi></mover></mtd> <mtd><msub><mi>Γ</mi> <mrow><mi>Σ</mi><mo>,</mo><mi>cp</mi></mrow></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi mathvariant='normal'>G</mi> <mi>P</mi></msub></mrow></mover></mtd> <mtd><msub><mi>Γ</mi> <mrow><mi>Σ</mi><mo>,</mo><mi>scp</mi></mrow></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>P</mi></mover></mtd> <mtd><msub><mi>Γ</mi> <mrow><mi>Σ</mi><mo>,</mo><mi>scp</mi></mrow></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mo>→</mo></mtd> <mtd><mn>0</mn></mtd></mtr> <mtr><mtd></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo>→</mo></mtd> <mtd><msub><mi>Γ</mi> <mrow><mi>Σ</mi><mo>,</mo><mi>tcp</mi></mrow></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>P</mi></mover></mtd> <mtd><msub><mi>Γ</mi> <mrow><mi>Σ</mi><mo>,</mo><mi>tcp</mi></mrow></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi mathvariant='normal'>G</mi> <mi>P</mi></msub></mrow></mover></mtd> <mtd><msub><mi>Γ</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>P</mi></mover></mtd> <mtd><msub><mi>Γ</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mo>→</mo></mtd> <mtd><mn>0</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+  0
+    &amp;\to&amp;
+  \Gamma_{\Sigma,cp}(E)
+   &amp;\overset{P}{\longrightarrow}&amp;
+  \Gamma_{\Sigma,cp}(E^\ast)
+    &amp;\overset{\mathrm{G}_P}{\longrightarrow}&amp;
+  \Gamma_{\Sigma,scp}(E)
+    &amp;\overset{P}{\longrightarrow}&amp;
+  \Gamma_{\Sigma,scp}(E^\ast)
+     &amp;\to&amp;
+  0 
+  \\
+  \\
+  0
+    &amp;\to&amp;
+  \Gamma_{\Sigma,tcp}(E)
+   &amp;\overset{P}{\longrightarrow}&amp;
+  \Gamma_{\Sigma,tcp}(E^\ast)
+    &amp;\overset{\mathrm{G}_P}{\longrightarrow}&amp;
+  \Gamma_{\Sigma}(E)
+    &amp;\overset{P}{\longrightarrow}&amp;
+  \Gamma_{\Sigma}(E^\ast)
+     &amp;\to&amp;
+  0
+  }
+
+</annotation></semantics></math></div>
+<p>of these operators restricted to functions with causally restricted supports as indicated (def. \ref{CompactlySourceCausalSupport}) are <a class='existingWikiWord' href='/nlab/show/exact+sequence'>exact sequence</a>s of <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector spaces</a> and continuous <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a>s between them.</p>
+
+<p>Under passing to <a class='existingWikiWord' href='/nlab/show/dual+space'>dual spaces</a> and using the isomorphisms of spaces of distributional sections (def. \ref{DistributionalSections}) from prop. \ref{DistributionsWithCausalSupports} this yields the following dual <a class='existingWikiWord' href='/nlab/show/exact+sequence'>exact sequence</a> of <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector spaces</a> and continuous <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> between them:</p>
+<div class='maruku-equation' id='eq:GreenHyperbolicOperatorDualExactSequence'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_1778fa62ac407de747320ed828105818dfeec9e1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mn>0</mn></mtd> <mtd><mo>→</mo></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mrow><mi>Σ</mi><mo>,</mo><mi>tcp</mi></mrow></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><msup><mi>P</mi> <mo>*</mo></msup></mrow></mover></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mrow><mi>Σ</mi><mo>,</mo><mi>tcp</mi></mrow></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi mathvariant='normal'>G</mi> <mrow><msup><mi>P</mi> <mo>*</mo></msup></mrow></msub></mrow></mover></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><msup><mi>P</mi> <mo>*</mo></msup></mrow></mover></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mo>→</mo></mtd> <mtd><mn>0</mn></mtd></mtr> <mtr><mtd></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo>→</mo></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mrow><mi>Σ</mi><mo>,</mo><mi>cp</mi></mrow></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><msup><mi>P</mi> <mo>*</mo></msup></mrow></mover></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mrow><mi>Σ</mi><mo>,</mo><mi>cp</mi></mrow></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi mathvariant='normal'>G</mi> <mrow><msup><mi>P</mi> <mo>*</mo></msup></mrow></msub></mrow></mover></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mrow><mi>Σ</mi><mo>,</mo><mi>scp</mi></mrow></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mrow><msup><mi>P</mi> <mo>*</mo></msup></mrow></mover></mtd> <mtd><mi>Γ</mi><msub><mo>′</mo> <mrow><mi>Σ</mi><mo>,</mo><mi>scp</mi></mrow></msub><mo stretchy='false'>(</mo><msup><mi>E</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mtd> <mtd><mo>→</mo></mtd> <mtd><mn>0</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  
+  \array{
+  0
+    &amp;\to&amp;
+  \Gamma&#39;_{\Sigma,tcp}(E)
+   &amp;\overset{P^*}{\longrightarrow}&amp;
+  \Gamma&#39;_{\Sigma,tcp}(E^\ast)
+    &amp;\overset{-\mathrm{G}_{P^*}}{\longrightarrow}&amp;
+  \Gamma&#39;_{\Sigma}(E)
+    &amp;\overset{P^*}{\longrightarrow}&amp;
+  \Gamma&#39;_{\Sigma}(E^\ast)
+    &amp;\to&amp;
+  0 
+  \\
+  \\
+  0
+    &amp;\to&amp;
+  \Gamma&#39;_{\Sigma,cp}(E)
+   &amp;\overset{P^*}{\longrightarrow}&amp;
+  \Gamma&#39;_{\Sigma,cp}(E^\ast)
+    &amp;\overset{-\mathrm{G}_{P^*}}{\longrightarrow}&amp;
+  \Gamma&#39;_{\Sigma,scp}(E)
+    &amp;\overset{P^*}{\longrightarrow}&amp;
+  \Gamma&#39;_{\Sigma,scp}(E^\ast)
+     &amp;\to&amp;
+  0
+  }
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 15, 2017 09:26:17 
+  Revised on November 15, 2017 13:11:55 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.76.82.164)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1245" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1245 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1246" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1246 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
